tests/sksl/errors/CanExitWithoutReturningValue.dsl.glsl
### Compilation failed:

error: function 'if_only' can exit without returning a value

error: function 'return_on_if_but_not_else' can exit without returning a value

error: function 'return_on_else_but_not_if' can exit without returning a value

error: function 'for_with_conditional_return' can exit without returning a value

error: function 'for_with_conditional_break' can exit without returning a value

error: function 'for_with_conditional_continue' can exit without returning a value

error: function 'do_with_conditional_return' can exit without returning a value

error: function 'do_with_conditional_break' can exit without returning a value

error: function 'do_with_conditional_continue' can exit without returning a value

error: function 'bad_if_else_chain' can exit without returning a value

error: function 'switch_empty' can exit without returning a value

error: function 'switch_with_no_default' can exit without returning a value

error: function 'switch_with_break' can exit without returning a value

error: function 'switch_with_continue' can exit without returning a value

error: function 'switch_with_fallthrough_off_bottom' can exit without returning a value

error: function 'switch_with_conditional_break' can exit without returning a value

error: function 'switch_with_conditional_continue' can exit without returning a value

error: function 'switch_with_conditional_if_then_return' can exit without returning a value

error: function 'switch_with_conditional_break_then_fallthrough' can exit without returning a value

19 errors
